<resources>
    <string name="app_name">Android_Restaurante</string>

    <!--Activity SplashActivity-->
    <string name="image_splash">Restaurante</string>
    <string name="view_splash">Registro de Pedidos en un restaurante</string>

    <!--Layout item_list_plato-->
    <string name="view_nombre_plato">Nombre del plato</string>
    <string name="view_precio_plato">Precio del plato</string>

    <!--Layout item_list_pedido-->
    <string name="view_nombre_pedido">Nombre pedido</string>
    <string name="view_cantidad_pedido">Cantidad pedido</string>
    <string name="view_precio_pedido">Precio pedido</string>

    <!--FragmentCarta-->
    <string name="btn_sync">Sincronizar</string>

    <!--Dialogo fullScreen-->
    <string name="view_titulo">Titulo</string>
    <string name="view">Cantidad del pedido</string>
    <string name="view_precio_desc">0</string>
    <string name="view_desc">Descripcion</string>
    <string name="btn_pedir">Agregar al pedido</string>
    <string name="valor">0</string>

</resources>
