<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dialogFullScreen"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/view_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/view_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen_desc"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_titulo"
        app:srcCompat="@drawable/plato" />

    <TextView
        android:id="@+id/view_precio_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_precio_desc"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imagen_desc"/>

    <TextView
        android:id="@+id/view_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_precio_desc"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:text="@string/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_desc" />

    <EditText
        android:id="@+id/cantidad_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:inputType="number"
        android:hint="@string/valor"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_agrega_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif-monospace"
        android:text="@string/btn_pedir"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad_pedido" />

</android.support.constraint.ConstraintLayout>