<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_nombre_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_nombre_pedido"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/view_cantidad_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_cantidad_pedido"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/view_precio_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_precio_pedido"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

</LinearLayout>